--- a/holamundo.html
+++ b/holamundo.html
@@ -6,7 +6,11 @@
   <title>JS Bin</title>
 </head>
 <body>
-  <h1> HOLA MUNDO </h1>
-  <h2> Hello my friend </h2>
+  <iframe id="inlineFrameExample"
+    title="Inline Frame Example"
+    width="300"
+    height="300"
+    src="https://www.youtube.com/watch?v=fpThB24WYZQ">
+</iframe>
 </body>
 </html>
