--- a/holamundo.html
+++ b/holamundo.html
@@ -6,11 +6,6 @@
   <title>JS Bin</title>
 </head>
 <body>
-  <iframe id="inlineFrameExample"
-    title="Inline Frame Example"
-    width="300"
-    height="300"
-    src="https://www.youtube.com/watch?v=fpThB24WYZQ">
-</iframe>
+  <h1> HOLA MUNDO </h1>
 </body>
 </html>
