--- a/hb.html
+++ b/hb.html
@@ -6,7 +6,7 @@
   <title>Lucas Fazio Health Analyisis</title>
 </head>
   <body color="#00000">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/GVm8pFDxUjU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/GVm8pFDxUjU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </iframe>
   </body>
 </html>
