--- a/hb.html
+++ b/hb.html
@@ -7,7 +7,7 @@
 </head>
   <body color="#00000">
     <div class="container">
-    <iframe src="https://www.youtube.com/embed/GVm8pFDxUjU?autoplay=1&mute=1&enablejsapi=1"
+    <iframe src="https://www.youtube.com/embed/GVm8pFDxUjU?autoplay=1&mute=1&enablejsapi=1&modestbranding=1;autohide=1&amp;showinfo=0&amp;controls=0"
     frameborder="0" allowfullscreen class="video" autoplay = "autoplay"> 
     </iframe>
   </div>
