--- a/w51.html
+++ b/w51.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
+  <title>NBA Defense rating</title>
 </head>
 <body>
 <h1 align="center">
